--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,9 @@
-[build-system]
-requires = ["setuptools>=61.0"]
-build-backend = "setuptools.build_meta"
-
 [project]
 name = "ege-chemistry-platform"
 version = "0.1.0"
 description = "Платформа для подготовки к ЕГЭ по химии"
 authors = [
-    {name = "Your Name", email = "your.email@example.com"}
+    {name = "Pavel Sokolov", email = "pashasokolov779@gmail.com"}
 ]
 dependencies = [
     "fastapi>=0.104.0",
@@ -16,14 +12,10 @@ dependencies = [
     "sqlalchemy>=2.0.0",
     "asyncpg>=0.29.0",
     "alembic>=1.12.0",
-    "psycopg2-binary>=2.9.0",
     "pydantic>=2.0.0",
     "pydantic-settings>=2.0.0",
-    "sqlalchemy>=2.0.0",
-    "asyncpg>=0.29.0",
-    "alembic>=1.12.0",
-    "pydantic-settings>=2.0.0",
-    "pydantic>=2.0.0",
+    "bcrypt>=5.0.0",
+    "email-validator>=2.0.0",
 ]
 
 [project.optional-dependencies]
@@ -36,3 +28,7 @@ dev = [
 
 [project.scripts]
 app = "src.app.main:main"
+
+[build-system]
+requires = ["setuptools>=61.0", "wheel"]
+build-backend = "setuptools.build_meta"
